--- a/deptmanagementsystem/templates/add_marks.html
+++ b/deptmanagementsystem/templates/add_marks.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Marks</title>
+    <title>Add CGP</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-    <h1>Add Marks</h1>
+    <h1>Add CGP</h1>
     <form method="post" action="">
         {% csrf_token %}
         <table>
