--- a/deptmanagementsystem/templates/login.html
+++ b/deptmanagementsystem/templates/login.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
-    <link rel="stylesheet" href="styles.css"></style>
     <style>
         html, body {
     margin: 0;
@@ -97,7 +96,7 @@ button#cbtn:hover {
         <button id="sbtn" type="submit">Login</button>
         <div class="inner-lower-box">
             <button id="cbtn" type="button">Cancle</button>
-            <span id="forgotpsw"><a>forgot password?</a></span>
+            <span id="forgotpsw">New Here?<a url="{% url 'register'%}">register</a></span>
         </div>
     </form>
 </body>
