--- a/deptmanagementsystem/templates/add_marks.html
+++ b/deptmanagementsystem/templates/add_marks.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add CGP</title>
+{% extends 'base.html' %}
+
+{% block content %}
+<title>Add CGP</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -51,8 +49,7 @@
             background-color: #005200; /* Dark green button background on hover */
         }
     </style>
-</head>
-<body>
+
     <h1>Add CGP</h1>
     <form method="post" action="">
         {% csrf_token %}
@@ -74,5 +71,5 @@
         </table>
         <button type="submit">Submit</button>
     </form>
-</body>
-</html>
+    {% endblock content %}
+
