--- a/deptmanagementsystem/templates/login.html
+++ b/deptmanagementsystem/templates/login.html
@@ -94,10 +94,10 @@ button#cbtn:hover {
         <label for="password">PASSWORD</label>
         <input type="password" placeholder="your password" id="password" name="password" required> 
         <button id="sbtn" type="submit">Login</button>
-        <div class="inner-lower-box">
+        <!-- <div class="inner-lower-box">
             <button id="cbtn" type="button">Cancle</button>
-            <span id="forgotpsw">New Here?<a url="{% url 'register'%}">register</a></span>
-        </div>
+            <span id="forgotpsw">New Here?<a url="">register</a></span>
+        </div> -->
     </form>
 </body>
 </html>
