--- a/deptmanagementsystem/templates/base.html
+++ b/deptmanagementsystem/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>College Management</title>
+<title>Academia Net</title>
 {% load static %}
 <link rel="stylesheet" href="{% static 'styles.css' %}">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -14,7 +14,7 @@
     <nav id="navigation" class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">
-              <img src="{% static 'logo.png' %}" alt="logo" width="30" height="30" class="d-inline-block align-text-top"> &nbsp; </a>
+              <img src="{% static 'logo.png' %}" alt="logo" width="30" height="30" class="d-inline-block align-text-top"> &nbsp;</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,14 +24,26 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="{% url 'forum-list' %}">Forum</a>
+                <a class="nav-link" href="{% url 'forum-list' %}">General Forum</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Results</a>
+                  <a class="nav-link" href="{% url 'view-marks' %}">Result</a>
                 </li>
-                {% if request.user.userType == "prof" or "hod" or "clerk" %}
+                {% if request.user.userType != "stud" %}
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Complaint Forum</a>
+                  <a class="nav-link" href="{% url 'add-complaint' %}">Complaint Forum</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'add-student' %}">Add Student</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'add-marks' %}">Add Marks</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'add-forum' %}">Add To General Forum</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'view-student' %}">View All Students</a>
                 </li>
                 {% endif %}
             </ul>
