--- a/deptmanagementsystem/templates/add_marks.html
+++ b/deptmanagementsystem/templates/add_marks.html
@@ -61,10 +61,10 @@
                 </tr>
             </thead>
             <tbody>
-                {% for student in students %}
+                {% for mark in marks %}
                     <tr>
-                        <td>{{ student.name }}</td>
-                        <td><input type="text" name="marks_{{ student.id }}" required></td>
+                        <td>{{ mark.student.name }}</td>
+                        <td><input type="text" name="marks_{{ mark.student.id }}" value="{{ mark.cgp }}" ></td>
                     </tr>
                 {% endfor %}
             </tbody>
