--- a/deptmanagementsystem/templates/base.html
+++ b/deptmanagementsystem/templates/base.html
@@ -45,6 +45,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'view-student' %}">View All Students</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'user-list' %}">View Admin</a>
+                </li>
                 {% endif %}
                 {% if request.user.userType == "hod" %}
                 <li class="nav-item">
