--- a/deptmanagementsystem/templates/login.html
+++ b/deptmanagementsystem/templates/login.html
@@ -54,6 +54,7 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-bottom: 1rem;
 }
 
 button#sbtn:hover {
@@ -84,6 +85,7 @@ button#cbtn:hover {
 }
 
     </style>
+
 </head>
 <body>
     <form class="box" method="post" action="{% url 'login_view' %}">
@@ -94,10 +96,59 @@ button#cbtn:hover {
         <label for="password">PASSWORD</label>
         <input type="password" placeholder="your password" id="password" name="password" required> 
         <button id="sbtn" type="submit">Login</button>
-        <!-- <div class="inner-lower-box">
-            <button id="cbtn" type="button">Cancle</button>
-            <span id="forgotpsw">New Here?<a url="">register</a></span>
-        </div> -->
+        <button id="useBarCode">Scan ID-card</button>
     </form>
+
+    <div class="box" style="width:min-content;" id="scanId" hidden>
+        <h2>Webcam Capture</h2>
+        <video id="webcam" width="320" height="240" autoplay></video>
+        <button id="captureButton" style="margin-top:1rem;">Capture Photo</button>
+        <canvas id="canvas" width="320" height="240" style="display: none;"></canvas>
+        <img id="capturedImage" alt="Captured Image" style="display: none;"/>
+    </div>
+
+    <form id="imageForm" method="POST" action="/submit-image">
+        {% csrf_token %}
+        <input type="hidden" name="imageData" id="imageData" />
+    </form>
+
 </body>
+
+<script>
+    const scanId = document.getElementById('scanId');
+    const webcam = document.getElementById('webcam');
+    const captureButton = document.getElementById('captureButton');
+    const canvas = document.getElementById('canvas');
+    const capturedImage = document.getElementById('capturedImage');
+    const barCodeBtn = document.getElementById('useBarCode');
+    const imageDataInput = document.getElementById('imageData');
+
+    barCodeBtn.addEventListener('click', () => {
+        scanId.hidden = false;
+
+        if (navigator.mediaDevices.getUserMedia) {
+            navigator.mediaDevices.getUserMedia({ video: true })
+                .then((stream) => {
+                    webcam.srcObject = stream;
+                })
+                .catch((error) => {
+                    console.error('Error accessing webcam:', error);
+                });
+            
+        } else {
+            console.error('getUserMedia not supported in this browser.');
+        }
+    });
+
+    captureButton.addEventListener('click', () => {
+        const context = canvas.getContext('2d');
+        context.drawImage(webcam, 0, 0, canvas.width, canvas.height);
+
+        const imageDataUrl = canvas.toDataURL('image/png');
+        capturedImage.src = imageDataUrl;
+        capturedImage.style.display = 'block';
+        imageDataInput.value = imageDataUrl;
+        imageForm.submit();
+    });
+</script>
 </html>
